# holochain-serialization

./: .gitignore  CHANGELOG-UNRELEASED.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  bench.sh  config.nix  default.nix  flake.nix  fuzz.sh
.circleci/: config.yml
.github/workflows/: build.yaml  lint.yaml  test.yaml
crates/holochain_json_api/: Cargo.toml  README.md
crates/holochain_json_api/src/: json.rs  lib.rs
crates/holochain_json_api/src/error/: mod.rs
crates/holochain_json_derive/: Cargo.toml  README.md
crates/holochain_json_derive/src/: lib.rs
crates/holochain_serialized_bytes/: Cargo.toml  README.md
crates/holochain_serialized_bytes/benches/: bench.rs
crates/holochain_serialized_bytes/src/: lib.rs  prelude.rs
crates/holochain_serialized_bytes_derive/: Cargo.toml
crates/holochain_serialized_bytes_derive/src/: lib.rs
nix/: sources.json
release/hook/publish/: default.nix
release/hook/version/: default.nix
test/: default.nix
test/holochain_serialized_bytes/: Cargo.toml
test/holochain_serialized_bytes/benches/: bench.rs
test/holochain_serialized_bytes/src/: lib.rs
test/holochain_serialized_bytes/tests/: tests.rs
