[workspace]
members = [
  "crates/holochain_serialized_bytes",
  "test/holochain_serialized_bytes",
]
resolver = "2"

[workspace.package]
version = "0.0.56"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "messagepack", "json", "serialization"]
license = "Apache-2.0"
repository = "https://github.com/holochain/holochain-serialization"
edition = "2021"

[workspace.dependencies]
syn = "2.0"
quote = "1.0"
serde = "=1.0.219"
serde_json = "1.0.51"
rmp-serde = "=1.3.0"
serde-transcode = "1.1.0"
thiserror = "2.0"
serde_bytes = "0.11"
tracing = "0.1"

holochain_serialized_bytes_derive = { version = "=0.0.56", path = "crates/holochain_serialized_bytes_derive" }

# Dev dependencies
arbitrary = "1.0"
proptest = "1.2"
proptest-derive ="0.5"

[workspace.lints.clippy]
style = "deny"
complexity = "deny"
perf = "deny"
correctness = "deny"
dbg_macro = "deny"
