[package]
name = "holochain_json_api"
version = "0.0.17"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
build = "build.rs"
description = "json api and utilities for holochain"
keywords = ["holochain", "holo", "json", "serialization", "serde"]
categories = ["database"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/holochain_json_api"
repository = "https://github.com/holochain/holochain-serialization"

[dependencies]
arrayref = "=0.3.5"
base64 = "=0.10.1"
chrono = "=0.4.6"
serde = "=1.0.89"
serde_derive = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
multihash = "=0.8.0"
futures-preview = "=0.3.0-alpha.17"
futures-core-preview = "=0.3.0-alpha.17"
futures-channel-preview = "=0.3.0-alpha.17"
futures-executor-preview = "=0.3.0-alpha.17"
futures-io-preview = "=0.3.0-alpha.17"
futures-sink-preview = "=0.3.0-alpha.17"
futures-util-preview = "=0.3.0-alpha.17"
hcid = "=0.0.6"
shrinkwraprs = "=0.2.1"
objekt = "=0.1.2"
# keep the version on the left hand side
# there is a regex in the release hook looking for it
holochain_json_derive = { version = "=0.0.17", path = "../holochain_json_derive" }
uuid = { version = "=0.7.1", features = ["v4"] }

[dev-dependencies]
maplit = "=1.0.1"
