[package]
name = "holochain_json_api"
version = "0.0.49"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
build = "build.rs"
description = "json api and utilities for holochain"
keywords = ["holochain", "holo", "json", "serialization", "serde"]
categories = ["database"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/holochain_json_api"
repository = "https://github.com/holochain/holochain-serialization"

[dependencies]
arrayref = "=0.3.5"
base64 = "=0.13.0"
chrono = "=0.4.6"
serde = "=1.0.123"
serde_derive = "=1.0.123"
serde_json = { version = "1.0.51", features = ["preserve_order"] }
multihash = "=0.8.0"
futures = "=0.3.5"
hcid = "=0.0.6"
shrinkwraprs = "=0.3.0"
objekt = "=0.1.2"
# keep the version on the left hand side
# there is a regex in the release hook looking for it
holochain_json_derive = { version = "=0.0.49", path = "../holochain_json_derive" }
uuid = { version = "=0.8.1", features = ["v4"] }

[dev-dependencies]
maplit = "=1.0.1"
