[package]
name = "holochain_json_derive"
version = "0.0.47"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
description = "Provides derive macros for holochain persistence."
edition="2018"
keywords = ["holochain", "holo", "json", "serde", "derive"]
categories = ["parsing"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/holochain_json_derive"
repository = "https://github.com/holochain/holochain-serialization"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
serde = "=1.0.104"
serde_json = { version = "1.0.51", features = ["preserve_order"] }
