[package]
name = "holochain_serialized_bytes"
version = "0.0.51"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
description = "serialized bytes for holochain"
keywords = ["holochain", "holo", "messagepack", "json", "serialization"]
categories = ["database"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/holochain_serialized_bytes"
repository = "https://github.com/holochain/holochain-serialization"
edition = "2018"

[dependencies]
serde = { version = "1.0.123", features = ["serde_derive"] }
serde_json = { version = "1.0.51", features = ["preserve_order"] }
holochain_serialized_bytes_derive = { version = "=0.0.51", path = "../holochain_serialized_bytes_derive" }
rmp-serde = "0.15"
serde-transcode = "1.1.0"
thiserror = "1.0.10"
serde_bytes = "0.11"
tracing = { version = "0.1", optional = true }

arbitrary = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.3"
tracing-subscriber="0.2"
test-fuzz = "=3.0.4"

[[bench]]
name = "bench"
harness = false

[features]
trace = ["tracing"]
