[package]
name = "holochain_serialized_bytes"
version = "0.0.55"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
description = "Serialized bytes for Holochain"
keywords = ["holochain", "messagepack", "json", "serialization"]
license = "Apache-2.0"
documentation = "https://docs.rs/holochain_serialized_bytes"
repository = "https://github.com/holochain/holochain-serialization"
edition = "2021"

[dependencies]
serde = { version = "=1.0.219", features = ["serde_derive"] }
serde_json = { version = "1.0.51", features = ["preserve_order"] }
rmp-serde = "=1.3.0"
serde-transcode = "1.1.0"
thiserror = "2.0"
serde_bytes = "0.11"
tracing = { version = "0.1", optional = true }

holochain_serialized_bytes_derive = { version = "=0.0.55", path = "../holochain_serialized_bytes_derive", optional = true }

arbitrary = { version = "1.0", features = ["derive"], optional = true }
proptest = { version = "1.2", optional = true }
proptest-derive = { version = "0.5", optional = true }

[features]
default = ["derive"]

derive = ["dep:holochain_serialized_bytes_derive"]

fuzzing = ["dep:arbitrary", "dep:proptest", "dep:proptest-derive"]

trace = ["dep:tracing"]

[lints]
workspace = true
