[package]
name = "holochain_serialized_bytes"
version.workspace = true
description = "Serialized bytes for Holochain"
documentation = "https://docs.rs/holochain_serialized_bytes"
authors.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
rmp-serde.workspace = true
serde-transcode.workspace = true
thiserror.workspace = true
serde_bytes.workspace = true
tracing = { workspace = true, optional = true }

holochain_serialized_bytes_derive = { workspace = true, optional = true }

arbitrary = { workspace = true, features = ["derive"], optional = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }

[features]
default = ["derive"]

derive = ["dep:holochain_serialized_bytes_derive"]

fuzzing = ["dep:arbitrary", "dep:proptest", "dep:proptest-derive"]

trace = ["dep:tracing"]

[lints]
workspace = true
