[package]
name = "holochain_serialized_bytes_derive"
version.workspace = true
description = "Provides derive macros for holochain_serialized_bytes"
documentation = "https://docs.rs/holochain_serialized_bytes_derive"
authors.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true

[lints]
workspace = true
