[package]
name = "test_holochain_serialized_bytes"
version = "0.0.26"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
description = "test serialized bytes for holochain"
keywords = ["holochain", "holo", "messagepack", "json", "serialization"]
categories = ["database"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/holochain_serialized_bytes"
repository = "https://github.com/holochain/holochain-serialization"

[dependencies]
holochain_serialized_bytes = { version = "=0.0.25", path = "../../crates/holochain_serialized_bytes" }
serde = "=1.0.104"
